[gd_scene load_steps=21 format=3 uid="uid://fgvwue1pno8v"]

[ext_resource type="Script" path="res://test_scenes/test_rule_based_system.gd" id="1_4p4v4"]
[ext_resource type="Script" path="res://addons/rule_based_godot/system/rule_based_system.gd" id="1_ihwfs"]
[ext_resource type="Script" path="res://addons/rule_based_godot/resources/actions/set_property_action.gd" id="2_djs4n"]
[ext_resource type="Script" path="res://addons/rule_based_godot/resources/arbiters/least_recently_used_arbiter.gd" id="3_2gpba"]
[ext_resource type="Script" path="res://addons/rule_based_godot/resources/rule.gd" id="3_sxtgj"]
[ext_resource type="Script" path="res://addons/rule_based_godot/resources/matches/datum/hierarchy_match.gd" id="4_hvotr"]
[ext_resource type="Script" path="res://addons/rule_based_godot/resources/rule_list.gd" id="4_udnf2"]
[ext_resource type="Script" path="res://test_scenes/hierarchy_and_wildcard/components/button_tree.gd" id="7_80qkv"]

[sub_resource type="Resource" id="Resource_hut6e"]
script = ExtResource("3_2gpba")

[sub_resource type="Resource" id="Resource_il53l"]
script = ExtResource("2_djs4n")
property_and_value = {
"text": "yes"
}
agent_type = 0
agent_path = NodePath("../Statements/AParentB/answer")

[sub_resource type="Resource" id="Resource_kcdvr"]
script = ExtResource("4_hvotr")
source_node_path = NodePath("../Root/A/AChildren")
relation = "Parent of"
tester_is_wildcard = false
tester_path = NodePath("../Root/A/AChildren/B")

[sub_resource type="Resource" id="Resource_b7tn2"]
resource_name = "A parent of B"
script = ExtResource("3_sxtgj")
condition = SubResource("Resource_kcdvr")
actions = Array[Resource("res://addons/rule_based_godot/resources/actions/abstract_action.gd")]([SubResource("Resource_il53l")])

[sub_resource type="Resource" id="Resource_02w6u"]
script = ExtResource("2_djs4n")
property_and_value = {
"text": "yes"
}
agent_type = 0
agent_path = NodePath("../Statements/CChildA/answer")

[sub_resource type="Resource" id="Resource_rnber"]
script = ExtResource("4_hvotr")
source_node_path = NodePath("../Root/A/AChildren/C")
relation = "Child of"
tester_is_wildcard = false
tester_path = NodePath("../Root/A/AChildren")

[sub_resource type="Resource" id="Resource_e43tb"]
resource_name = "C child of A"
script = ExtResource("3_sxtgj")
condition = SubResource("Resource_rnber")
actions = Array[Resource("res://addons/rule_based_godot/resources/actions/abstract_action.gd")]([SubResource("Resource_02w6u")])

[sub_resource type="Resource" id="Resource_o6ct1"]
script = ExtResource("2_djs4n")
property_and_value = {
"text": "yes"
}
agent_type = 0
agent_path = NodePath("../Statements/BSibliingC/answer")

[sub_resource type="Resource" id="Resource_lnxb5"]
script = ExtResource("4_hvotr")
source_node_path = NodePath("../Root/A/AChildren/B")
relation = "Sibling of"
tester_is_wildcard = false
tester_path = NodePath("../Root/A/AChildren/C")

[sub_resource type="Resource" id="Resource_plnrn"]
resource_name = "B sibling of C"
script = ExtResource("3_sxtgj")
condition = SubResource("Resource_lnxb5")
actions = Array[Resource("res://addons/rule_based_godot/resources/actions/abstract_action.gd")]([SubResource("Resource_o6ct1")])

[sub_resource type="Resource" id="Resource_flun7"]
script = ExtResource("4_udnf2")
_rule_based_godot = &"RuleList"
rules = Array[ExtResource("3_sxtgj")]([SubResource("Resource_b7tn2"), SubResource("Resource_e43tb"), SubResource("Resource_plnrn")])

[sub_resource type="GDScript" id="GDScript_eiek8"]
script/source = "extends Button
"

[node name="HierarchyTest" type="Node2D"]
script = ExtResource("1_4p4v4")

[node name="RuleBasedSystem" type="Node" parent="."]
script = ExtResource("1_ihwfs")
arbiter = SubResource("Resource_hut6e")
rule_list = SubResource("Resource_flun7")

[node name="Root" type="VBoxContainer" parent="."]
offset_left = 273.0
offset_top = 239.0
offset_right = 320.0
offset_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_80qkv")

[node name="A" type="Button" parent="Root"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
toggle_mode = true
text = "A"
script = SubResource("GDScript_eiek8")

[node name="AChildren" type="VBoxContainer" parent="Root/A"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 1.0
offset_right = 46.0
offset_bottom = 67.0
grow_horizontal = 0
grow_vertical = 0

[node name="B" type="Button" parent="Root/A/AChildren"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
toggle_mode = true
text = "B"
script = SubResource("GDScript_eiek8")

[node name="BChildren" type="VBoxContainer" parent="Root/A/AChildren/B"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 34.0
grow_horizontal = 0
grow_vertical = 0

[node name="C" type="Button" parent="Root/A/AChildren"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
toggle_mode = true
text = "C"
script = SubResource("GDScript_eiek8")

[node name="CChildren" type="VBoxContainer" parent="Root/A/AChildren/C"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 0

[node name="Statements" type="VBoxContainer" parent="."]
offset_left = 535.0
offset_top = 261.0
offset_right = 674.0
offset_bottom = 347.0

[node name="AParentB" type="HBoxContainer" parent="Statements"]
layout_mode = 2

[node name="Label" type="Label" parent="Statements/AParentB"]
layout_mode = 2
text = "A is parent of B: "

[node name="answer" type="Label" parent="Statements/AParentB"]
layout_mode = 2
text = "?"

[node name="CChildA" type="HBoxContainer" parent="Statements"]
layout_mode = 2

[node name="Label" type="Label" parent="Statements/CChildA"]
layout_mode = 2
text = "C is child of A: "

[node name="answer" type="Label" parent="Statements/CChildA"]
layout_mode = 2
text = "?"

[node name="BSibliingC" type="HBoxContainer" parent="Statements"]
layout_mode = 2

[node name="Label" type="Label" parent="Statements/BSibliingC"]
layout_mode = 2
text = "B is sibling of C: "

[node name="answer" type="Label" parent="Statements/BSibliingC"]
layout_mode = 2
text = "?"

[connection signal="pressed" from="Root/A" to="Root" method="_on_a_pressed"]
[connection signal="pressed" from="Root/A/AChildren/B" to="Root" method="_on_b_pressed"]
[connection signal="pressed" from="Root/A/AChildren/C" to="Root" method="_on_c_pressed"]
